# crypto-trading

./: .gitattributes  .gitignore  0.3  250802.key  250802.key.pub  README.md  crypto_infos.json  git_pull.bat  git_push.bat  indicator_infos.json  last_path.json  old_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup_dev_env.bat  strategy_performance_grid.csv  test_export_robust.py
archiv/: requirements - Kopie (2).txt
crypto_trading/: __init__.py  analysis_helper - Kopie.py  analysis_helper.py  config.py  download_cryptos.py  indicator_legend.py  indicators.py  main.py  strategy_optimizer.py  trades.py
crypto_trading/analysis/: adaptive_strategy.py  advanced_strategy_quick.py  backtest_candlestick_strategy.py  backtest_candlestick_strategy_advanced.py  backtester_250805a.py  batch_run.py  best_params.json  btc-1h-1y-10kpi-oos.py  btc-1h-1y-10kpi-walkforward - Kopie.py  btc-1h-1y-10kpi.py  candlestick_analyzer.py  compare_strategies.py  data_loader_250805a.py  debug_parquet_import.py  export_utils.py  grok-v2-parquet-analyse.py  indicator_context.py  kpi.py  (+48 more)
dokumentation/: Nutzung.docx  Nutzung.txt  Projektzusammenfassun1.docx  Projektzusammenfassung.docx  README_250805-3.md  binance.com.txt  erweitern.docx
fonts/: DejaVuSans-Bold.pkl  DejaVuSans-Oblique.pkl  DejaVuSans.pkl
report_output/: trades_detailed.csv
report_output_test/: trades_detailed.csv
results/: strategy_performance_grid.csv
tests/: conftest.py  run_backtest.py  test_all.py  test_backtest_all.py  test_fetch_all.py  test_indicators.py  test_strategy.py  test_trend_strategy.py
(+716 files in other folders)
