[metadata]
name = crypto-trading
version = 0.1.0
description = Modulares Python-Framework für Krypto-Trading, Backtesting und Analyse
author = Dein Name
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24
    pandas>=2.0
    matplotlib>=3.7
    yfinance>=0.2
    dash>=2.15
    plotly>=5.22
    fpdf>=1.7.2

[options.extras_require]
dev =
    pytest>=8.0
